compiler/test/parse-err/select-unary-func-wrong-arg-count.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

// expected-note@below{{function defined here}}
func twoArgs(a: int, b: int) -> bool {
    return a == b;
}

func SelectUnaryFuncWrongArgCount(m: Matrix<s, s, int>) -> Matrix<s, s, int> {
    // Unary select requires the function to have exactly 1 argument
    // expected-error@below{{select() with 1 matrix argument requires a function with 1 parameter, but got 2}}
    return select(twoArgs, m);
}
